--- a/Introduction to Html/Resmue.html
+++ b/Introduction to Html/Resmue.html
@@ -4,21 +4,20 @@
     <title>My Name is Muhammad Aftab Akram</title>
   </head>
   <body>
-    <h1>Aftab Akram</h1>
+    <h1>Resume</h1>
+<img src="C:\Users\ranaa\OneDrive\Pictures\Screenshots 1\Screenshot 2025-08-02 131815.png" height="150" width="150"/>
+<h2>Aftab Akram</h2>
     <p><strong>Email:</strong> ranaaftabakram982@gmail.com</p>
     <p><strong>Phone:</strong> 03087917014</p>
-
     <h2> Introduction</h2>
     <p>Hello!
 My name is [M Aftab Akram]. I am currently learning web development and I’m on the journey to become a MERN Stack Developer. I have a deep interest in how websites work and I enjoy creating simple web pages using HTML, CSS, and JavaScript.
 This is my first HTML project, and I’m excited to keep learning and building more! I am on the journey to become a developer. I have an interest in web development۔</p>
-
     <h2>Education</h2>
     <ul>
       <li>BS Computer Science - CUI Vehari (2021 - 2025)</li>
       <li>FSc Pre-Medical - Muslim College Multan(2019 - 2021)</li>
     </ul>
-
     <h2>Skills</h2>
     <ul>
       <li>HTML, CSS, JavaScript</li>
@@ -26,7 +25,6 @@ This is my first HTML project, and I’m excited to keep learning and building m
       <li>MongoDB, Express.js</li>
       <li>Git, GitHub</li>
     </ul>
-
     <h2>Experience</h2>
 <p>I am a beginner in web development, currently focusing on the MERN Stack (MongoDB, Express.js, React, and Node.js).
 I have started learning the basics of HTML, and I am building small projects to strengthen my understanding.
@@ -35,7 +33,6 @@ Although I do not have professional experience yet, I am passionate about coding
       <li>Personal Projects (Portfolio Website, To-Do App)</li>
       <li>Freelance Work (2 Clients on Fiverr)</li>
     </ul>
-
     <h2>Contact me</h2>
     <p><a href="https://www.linkedin.com/feed/">LinkedIn</a></p>
     <p><a href="https://github.com/Aftab272/WebDevelopmentCourse">GitHub</a></p>
